collapse sidebars bug fix

--- a/src/index.sass
+++ b/src/index.sass
@@ -68,7 +68,7 @@ html[data-theme='dark']
   --entry-bg: #1f1f1f
   --dropdown-bg: #2f2f2f
   --hover-item-bg: #3f3f3f
-  --active-item-bg: #2f2f2f
+  --active-item-bg: #4f4f4f
   --branch-color: #303030
   --highlight-block-color: #252525
   --rating-value-positive-bg: #468b6140
@@ -255,11 +255,13 @@ mark
   &__sidebar-toggle
     margin: 0 15px 0 0
     color: var(--black-color)
+    cursor: pointer
 
   &__logo
     font-size: 2rem
     font-weight: 900
     color: var(--black-color)
+    user-select: none
 
   &__profile-item
     margin-left: auto
@@ -328,6 +330,7 @@ mark
     margin-right: 30px
     display: flex
     align-items: center
+    cursor: pointer
 
   &__notify-popup-btn
     position: relative
@@ -445,6 +448,7 @@ mark
     position: relative
     display: flex
     align-items: center
+    cursor: pointer
 
     > svg
       color: var(--black-color)
@@ -458,6 +462,9 @@ mark
 
       > svg
         color: var(--light-blue-color)
+
+  &__login-btn
+    cursor: pointer
 
   &__notifications-count
     position: absolute
@@ -481,10 +488,10 @@ mark
   flex-shrink: 0
 
   &_visibled
-    transform: translateX(0)
+    display: block
 
   &_hidden
-    transform: translateX(-100%)
+    display: none
 
   &__header
     display: none
@@ -540,6 +547,7 @@ mark
     width: 28px
     height: 28px
     color: var(--black-color)
+    cursor: pointer
 
 .main
   flex-grow: 1
@@ -547,23 +555,24 @@ mark
 .right-sidebar
   position: sticky
   top: 60px
-  padding: 0 20px 20px 30px
-  width: 320px
   height: calc(100vh - 60px)
-  display: flex
-  flex-direction: column
   flex-shrink: 0
   overflow-y: scroll
   scrollbar-width: none
 
   &_visibled
-    transform: translateX(0)
+    display: block
 
   &_hidden
-    transform: translateX(-100%)
+    display: none
 
   &::-webkit-scrollbar
     width: 0
+
+  &__body
+    width: 320px
+    padding: 0 20px 20px 30px
+    background: var(--bg-color)
 
   &__header
     margin: 0 0 10px
@@ -725,6 +734,10 @@ mark
       font-weight: 500
 
   &__author-name
+    max-width: 200px
+    white-space: nowrap
+    overflow: hidden
+    text-overflow: ellipsis
     font-size: 15px
 
     &_link
@@ -760,11 +773,14 @@ mark
     stroke-width: 3
 
   .main__subtitle
-    margin: 10px 20px 0
+    margin: 0 20px
     color: var(--black-color)
     line-height: 1.5rem
     word-break: break-word
     display: block
+
+    &:not(:first-child)
+      margin: 10px 20px 0
 
   .main__cover-video-container
     margin: 15px 0 0
@@ -848,6 +864,10 @@ mark
     right: 0
     color: #595959
     background: #fff
+
+  .rating__like-icon, .rating__dislike-icon
+    &:hover
+      cursor: pointer
 
   .rating__dislike-icon
     margin: 0 10px 0 0
@@ -2035,8 +2055,6 @@ mark
         color: var(--grey-color)
 
     &__theme-toggle-wrapp
-      cursor: pointer
-
       & svg
         &:hover
           color: var(--light-blue-color)
@@ -2046,9 +2064,6 @@ mark
         &:hover
           color: var(--light-blue-color)
 
-    &__bell-btn
-      cursor: pointer
-
     &__notify-item
       &:hover
         background: var(--hover-item-bg)
@@ -2056,7 +2071,6 @@ mark
     &__login-btn
       &:hover
         color: var(--light-blue-color)
-        cursor: pointer
 
   .left-sidebar
     &__link
@@ -2209,7 +2223,7 @@ mark
   .login-wrapper
     &__login-body-close-btn
       &:hover
-        color: #fff
+        color: var(--grey-color)
 
 @media (max-width: 768px)
   .header
@@ -2217,9 +2231,6 @@ mark
 
     &__logo
       font-size: 1.75rem
-
-    &__theme-toggle-wrapp
-      display: none
 
     &__dropdown
       right: 10px
@@ -2289,74 +2300,6 @@ mark
         & svg
           display: none
 
-    &__entries-list-empty
-      border-radius: 0
-
-  .left-sidebar
-    position: fixed
-    top: 0
-    padding: 0
-    width: 100%
-    height: 100%
-    background: rgba(0, 0, 0, 0.5)
-    z-index: 2
-    transition: transform 0.1s, background 0.1s 0.1s ease
-
-    &_visibled
-      transform: translateX(0)
-
-    &_hidden
-      transform: translateX(-100%)
-      background: rgba(0, 0, 0, 0.0)
-      transition: transform 0.1s 0.1s, background 0.1s ease
-
-    &__link
-      height: 48px
-      font-size: 18px
-
-    &__livebar-view-toggle
-      display: flex
-
-    &__body
-      width: 80%
-      height: 100%
-      background: var(--sidebar-bg)
-
-    &__header
-      position: relative
-      padding: 15px
-      height: 60px
-      display: flex
-      align-items: center
-
-    &__toggle
-      margin: 0 15px 0 0
-      color: var(--black-color)
-
-    &__header-logo
-      color: var(--black-color)
-      font-size: 1.75rem
-      font-weight: 900
-
-    &__main
-      padding: 10px
-
-    &__theme-toggle-moon
-      position: absolute
-      width: 35px
-      height: 35px
-      right: 15px
-      color: var(--black-color)
-      margin-left: auto
-
-    &__theme-toggle-sun
-      position: absolute
-      width: 35px
-      height: 35px
-      right: 15px
-      color: var(--black-color)
-      margin-left: auto
-
   .right-sidebar
     position: fixed
     width: 100%
@@ -2371,6 +2314,10 @@ mark
     &_hidden
       transform: translateY(-100%)
 
+    &__body
+      width: unset
+      padding: 0
+
     &__collapse-btn
       display: none
 
@@ -2379,7 +2326,8 @@ mark
       color: var(--black-color)
 
   .entry
-    border-radius: 0
+    margin-left: auto
+    margin-right: auto
 
     &__repost
       margin: 15px 15px 5px
@@ -2436,11 +2384,15 @@ mark
 
   .feed
     &__sorting-buttons-container
-      padding: 16px 12px 12px
-      width: unset
-      background: var(--entry-bg)
+      margin: 0 auto
+      width: 640px
+      padding-top: 16px
+      padding-bottom: 12px
 
     &__sorting-buttons
+      margin-left: auto
+      width: 50%
+
       > a:not(:first-child)
         margin: 0
 
@@ -2645,12 +2597,84 @@ mark
         width: 100%
         max-width: 640px
 
-@media (min-width: 768px) and (max-width: 1301px)
-  .right-sidebar
-    display: none
+@media (max-width: 640px)
+  .entry
+    max-width: 100%
+    border-radius: 0
 
+  .feed
+    &__sorting-buttons-container
+      padding: 16px 12px 12px
+      width: 100%
+      background: var(--entry-page-bg)
+
+    &__sorting-buttons
+      width: 100%
+
+  .profile
+    &__entries-list-empty
+      border-radius: 0
+
+@media (min-width: 768px) and (max-width: 1301px)
   .entry-page
     max-width: unset
+
+@media (max-width: 950px)
+  .left-sidebar
+    position: fixed
+    top: 0
+    padding: 0
+    width: 100%
+    height: 100%
+    background: rgba(0, 0, 0, 0.5)
+    z-index: 2
+
+    &__link
+      height: 48px
+      font-size: 18px
+
+    &__body
+      width: 80%
+      max-width: 300px
+      height: 100%
+      background: var(--sidebar-bg)
+
+    &__header
+      position: relative
+      padding: 0 20px
+      height: 60px
+      display: flex
+      align-items: center
+
+    &__toggle
+      margin: 0 15px 0 0
+      color: var(--black-color)
+      cursor: pointer
+
+    &__header-logo
+      color: var(--black-color)
+      font-size: 2rem
+      font-weight: 900
+      user-select: none
+
+    &__main
+      padding: 10px
+
+    &__theme-toggle-moon
+      position: absolute
+      width: 35px
+      height: 35px
+      right: 15px
+      color: var(--black-color)
+      margin-left: auto
+
+    &__theme-toggle-sun
+      position: absolute
+      width: 35px
+      height: 35px
+      right: 15px
+      color: var(--black-color)
+      margin-left: auto
 
 @keyframes pulse
   0%
@@ -2665,3 +2689,20 @@ mark
 @keyframes notify-popup-loader
   100%
     transform: rotate(360deg)
+
+@media (min-width: 768px) and (max-width: 1260px)
+  .right-sidebar
+    position: fixed
+    top: 0
+    width: 100%
+    height: 100%
+    background: rgba(0, 0, 0, 0.5)
+    z-index: 2
+
+    &__body
+      margin-left: auto
+
+@media (max-width: 1260px)
+  .left-sidebar
+    &__livebar-view-toggle
+      display: flex
